--- a/lrc/lrcutils/build.gradle
+++ b/lrc/lrcutils/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin:'maven-publish'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -23,6 +23,20 @@ android {
     }
 
 }
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+              //  from components.release
+                groupId = 'com.wustyq.ToastLib' //groupId 随便取
+                artifactId = 'wustyq'  //artifactId 随便取
+                version = '1.0.0'
+            }
+        }
+    }
+}
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
